# xlibre-server

./: .gitignore  COPYING  README.md  configure.ac  meson.build  meson_options.txt  xlibre-server.pc.in  xlibre-server_25.0.0.11.orig.tar.gz.delta  xlibre-server_25.0.0.11.orig.tar.gz.id  xlibre-server_25.0.0.12.orig.tar.gz.delta  xlibre-server_25.0.0.12.orig.tar.gz.id  xlibre-server_25.0.0.8.orig.tar.gz.delta  xlibre-server_25.0.0.8.orig.tar.gz.id  xlibre-server_25.0.0.9.orig.tar.gz.delta  xlibre-server_25.0.0.9.orig.tar.gz.id  xorg-server.pc.in
Xext/: bigreq.c  dpms.c  dpmsproc.h  geext.c  meson.build  panoramiX.c  panoramiX.h  panoramiXh.h  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  shape.c  shm.c  shm_priv.h  shmint.h  sleepuntil.c  sleepuntil.h  sync.c  xace.c  xace.h  xacestr.h  xcmisc.c  xf86bigfont.c  xres.c  xselinux_ext.c  xselinux_hooks.c  xselinux_label.c  xtest.c  xvdisp.c  xvdix_priv.h  xvmain.c  xvmc.c
Xi/: allowev.c  chgdctl.c  chgfctl.c  chgkbd.c  chgkmap.c  chgprop.c  chgptr.c  chgptr.h  closedev.c  devbell.c  exevents.c  exglobals.h  extinit.c  getbmap.c  getdctl.c  getfctl.c  getfocus.c  getkmap.c  getmmap.c  getprop.c  getprop.h  getselev.c  getvers.c  grabdev.c  grabdev.h  grabdevb.c  grabdevk.c  gtmotion.c  handlers.h  listdev.c  opendev.c  queryst.c  selectev.c  sendexev.c  setbmap.c  setdval.c  setfocus.c  setmmap.c  setmode.c  ungrdev.c  (+21 more)
composite/: compalloc.c  compext.c  compinit.c  compint.h  compositeext.h  compoverlay.c  compwindow.c  meson.build
config/: 10-nvidia.conf.in  hotplug_priv.h  udev.c  (+1 more)
hw/kdrive/: meson.build
hw/kdrive/ephyr/: ephyr.c  ephyr_draw.c  ephyr_glamor.c  ephyr_glamor_xv.c  ephyrinit.c  hostx.c
hw/kdrive/fbdev/: Xfbdev.man  fbdev.c  fbdev.h  fbinit.c  meson.build
hw/kdrive/linux/: evdev.c  keyboard.c  linux.c  meson.build
hw/kdrive/src/: kdrive.c  kdrive.h  kinput.c  kxv.c  meson.build
hw/xfree86/compat/: meson.build
(+503 files in other folders)
